--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Radio Jukebox</title>
+		<title>Radio MUNDO CHAT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,12 +15,12 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>Radio Jukebox</h1>
+						<h1>Radio CHINA</h1>
 						<p>
-							<a id="paradise" onclick="loadStream(0)" style="cursor:pointer"> Paradise  </a>&nbsp;&bull;&nbsp;
-							<a id="paradise" onclick="loadStream(1)" style="cursor:pointer">  Dance   </a>&nbsp;&bull;&nbsp;
-							<a id="paradise" onclick="loadStream(2)" style="cursor:pointer">  Folk  </a>&nbsp;&bull;&nbsp;
-							<a id="paradise" onclick="loadStream(3)" style="cursor:pointer">  Punk </a>
+							<a id="paradise" onclick="loadStream(0)" style="cursor:pointer"> HUMOR  </a>&nbsp;&bull;&nbsp;
+							<a id="paradise" onclick="loadStream(1)" style="cursor:pointer">  BUENA ONDA   </a>&nbsp;&bull;&nbsp;
+							<a id="paradise" onclick="loadStream(2)" style="cursor:pointer">  AMOR A CHINA  </a>&nbsp;&bull;&nbsp;
+							<a id="paradise" onclick="loadStream(3)" style="cursor:pointer">  BUSCA MACHO MALE </a>
 						</p>
 						<nav>
 							<ul>
